code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Best Execution Analytics for Smarter Trading (BEAST) client library for .NET

[![API Version](https://img.shields.io/badge/api-v3.0.0-blue)](https://developer.factset.com/api-catalog/)
[![Nuget](https://img.shields.io/badge/nuget-v0.3.0-orange)](https://www.nuget.org/packages/FactSet.SDK.BestExecutionAnalyticsforSmarterTradingBEAST/0.3.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Enables clients to programmatically access the underlying data which powers the BEAST Liquidity Analytics (LA) and Transaction Cost Analysis (TCA) applications.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.0.0
- SDK version: 0.3.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.BestExecutionAnalyticsforSmarterTradingBEAST -v 0.3.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.BestExecutionAnalyticsforSmarterTradingBEAST -Version 0.3.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.BestExecutionAnalyticsforSmarterTradingBEAST.Api;
using FactSet.SDK.BestExecutionAnalyticsforSmarterTradingBEAST.Client;
using FactSet.SDK.BestExecutionAnalyticsforSmarterTradingBEAST.Model;

namespace Example
{
    public static class GetLiquidityAnalyticsExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.BestExecutionAnalyticsforSmarterTradingBEAST.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new LiquidityAnalyticsApi(config);
            var securityIds = new List<string>(); // List<string> | ISIN for European securities, otherwise TICKER
            var startDate = DateTime.Parse("2024-08-21");  // DateTime | Date in the format YYYY-MM-DD
            var endDate = DateTime.Parse("2024-08-29");  // DateTime | Date in the format YYYY-MM-DD

            try
            {
                // Get Liquidity Analytics
                LiquidityAnalyticsResponseRoot result = apiInstance.GetLiquidityAnalytics(securityIds, startDate, endDate);
                Console.WriteLine(result.ToJson());
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling LiquidityAnalyticsApi.GetLiquidityAnalytics: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/beast/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*LiquidityAnalyticsApi* | [**GetLiquidityAnalytics**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/LiquidityAnalyticsApi.md#getliquidityanalytics) | **GET** /tca/liquidity/liquidity-analytics | Get Liquidity Analytics
*LiquidityAnalyticsApi* | [**GetLiquidityQuotes**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/LiquidityAnalyticsApi.md#getliquidityquotes) | **GET** /tca/liquidity/quotes | Get Liquidity Quotes
*LiquidityAnalyticsApi* | [**GetLiquidityTrades**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/LiquidityAnalyticsApi.md#getliquiditytrades) | **GET** /tca/liquidity/trades | Get Liquidity Trades
*LiquidityAnalyticsApi* | [**GetLiquidityVolumeAnalytics**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/LiquidityAnalyticsApi.md#getliquidityvolumeanalytics) | **GET** /tca/liquidity/volume-analytics | Get Liquidity Volume Analytics
*MarketImpactApi* | [**GetCostImpactV3**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/MarketImpactApi.md#getcostimpactv3) | **GET** /tca/market-impact/cost-impact | Get Cost Impact
*OrderDetailsApi* | [**GetOrderFillCount**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderDetailsApi.md#getorderfillcount) | **GET** /tca/order/fill-count | Get Order Fill Count
*OrderDetailsApi* | [**GetOrderIndexETF**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderDetailsApi.md#getorderindexetf) | **GET** /tca/order/index-etf | Get Index ETF data
*OrderDetailsApi* | [**GetOrderInfo**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderDetailsApi.md#getorderinfo) | **GET** /tca/order/order-info | Get Order Information
*OrderDetailsApi* | [**GetOrderIntraStats**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderDetailsApi.md#getorderintrastats) | **GET** /tca/order/intra-order-stats | Get Intra Order Stats
*OrderDetailsApi* | [**GetOrderInvestmentTiming**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderDetailsApi.md#getorderinvestmenttiming) | **GET** /tca/order/investment-timing | Get Order Investment Timings
*OrderDetailsApi* | [**GetOrderPriceTimeFills**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderDetailsApi.md#getorderpricetimefills) | **GET** /tca/order/price-time-fills | Get Price Time Fills
*OrderDetailsApi* | [**GetOrderPriceTimeQuotes**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderDetailsApi.md#getorderpricetimequotes) | **GET** /tca/order/price-time-quotes | Get Price Time Quotes
*OrderDetailsApi* | [**GetOrderPriceTimeTrades**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderDetailsApi.md#getorderpricetimetrades) | **GET** /tca/order/price-time-trades | Get Price Time Trades
*OrderDetailsApi* | [**GetOrderVolumePrice**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderDetailsApi.md#getordervolumeprice) | **GET** /tca/order/volume-price | Get Order Volume Prices
*OrderDetailsApi* | [**GetOrderVolumeTime**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderDetailsApi.md#getordervolumetime) | **GET** /tca/order/volume-time | Get Order Volume Times
*OrderDetailsApi* | [**GetOrderVolumeVenue**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderDetailsApi.md#getordervolumevenue) | **GET** /tca/order/volume-venue | Get Order Volume Venues
*OrderSearchApi* | [**GetFieldValues**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderSearchApi.md#getfieldvalues) | **GET** /tca/search/field-values | Get Order field values
*OrderSearchApi* | [**GetOrders**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderSearchApi.md#getorders) | **GET** /tca/search/orders | Get Orders by field values
*OutliersApi* | [**GetOutlierMetricsByPercentile**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OutliersApi.md#getoutliermetricsbypercentile) | **GET** /tca/outlier/metrics-by-percentile | Get Outlier Metrics by percentile
*OutliersApi* | [**GetOutlierMetricsStandard**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OutliersApi.md#getoutliermetricsstandard) | **GET** /tca/outlier/metrics-standard | Get Outlier Metrics by standard deviation
*ReportsApi* | [**GetParentAggregateAnalysis**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/ReportsApi.md#getparentaggregateanalysis) | **GET** /tca/report/parent-aggregate-analysis | Get Parent Aggregate Analysis


## Documentation for Models

 - [Model.AggregateMarketImpact](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/AggregateMarketImpact.md)
 - [Model.CostImpactResponseRootV3](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/CostImpactResponseRootV3.md)
 - [Model.CostImpactV3](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/CostImpactV3.md)
 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/Error.md)
 - [Model.ErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/ErrorResponse.md)
 - [Model.FieldValuesResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/FieldValuesResponse.md)
 - [Model.FieldValuesResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/FieldValuesResponseRoot.md)
 - [Model.IndexETF](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/IndexETF.md)
 - [Model.IndexETFResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/IndexETFResponse.md)
 - [Model.IndexETFResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/IndexETFResponseRoot.md)
 - [Model.IntraOrderStat](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/IntraOrderStat.md)
 - [Model.IntraOrderStatResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/IntraOrderStatResponse.md)
 - [Model.IntraOrderStatResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/IntraOrderStatResponseRoot.md)
 - [Model.InvestmentTiming](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/InvestmentTiming.md)
 - [Model.InvestmentTimingResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/InvestmentTimingResponse.md)
 - [Model.InvestmentTimingResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/InvestmentTimingResponseRoot.md)
 - [Model.LiquidityAnalyticsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/LiquidityAnalyticsResponse.md)
 - [Model.LiquidityAnalyticsResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/LiquidityAnalyticsResponseRoot.md)
 - [Model.MarketImpactQuoteAnalytics](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/MarketImpactQuoteAnalytics.md)
 - [Model.MarketImpactTradeAnalytics](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/MarketImpactTradeAnalytics.md)
 - [Model.MultiDayBenchmarks](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/MultiDayBenchmarks.md)
 - [Model.Order](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/Order.md)
 - [Model.OrderFillCountResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderFillCountResponse.md)
 - [Model.OrderFillCountResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderFillCountResponseRoot.md)
 - [Model.OrderInfoResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderInfoResponse.md)
 - [Model.OrderInfoResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrderInfoResponseRoot.md)
 - [Model.OrdersResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrdersResponse.md)
 - [Model.OrdersResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OrdersResponseRoot.md)
 - [Model.Outlier](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/Outlier.md)
 - [Model.OutlierData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OutlierData.md)
 - [Model.OutlierDataResult](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OutlierDataResult.md)
 - [Model.OutlierMetrics](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OutlierMetrics.md)
 - [Model.OutlierResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OutlierResponse.md)
 - [Model.OutlierResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OutlierResponseRoot.md)
 - [Model.OutputStrategyBinData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/OutputStrategyBinData.md)
 - [Model.PriceTimeFill](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/PriceTimeFill.md)
 - [Model.PriceTimeFillResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/PriceTimeFillResponse.md)
 - [Model.PriceTimeFillResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/PriceTimeFillResponseRoot.md)
 - [Model.PriceTimeQuote](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/PriceTimeQuote.md)
 - [Model.PriceTimeQuoteResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/PriceTimeQuoteResponse.md)
 - [Model.PriceTimeQuoteResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/PriceTimeQuoteResponseRoot.md)
 - [Model.PriceTimeTrade](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/PriceTimeTrade.md)
 - [Model.PriceTimeTradeResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/PriceTimeTradeResponse.md)
 - [Model.PriceTimeTradeResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/PriceTimeTradeResponseRoot.md)
 - [Model.QuotesAnalyticsResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/QuotesAnalyticsResponseRoot.md)
 - [Model.QuotesAndTradesAnalytics](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/QuotesAndTradesAnalytics.md)
 - [Model.QuotesAndTradesAnalyticsResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/QuotesAndTradesAnalyticsResponse.md)
 - [Model.ReportRecord](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/ReportRecord.md)
 - [Model.ReportResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/ReportResponse.md)
 - [Model.ReportResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/ReportResponseRoot.md)
 - [Model.TradesAnalyticsResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/TradesAnalyticsResponseRoot.md)
 - [Model.VolumeAnalytic](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumeAnalytic.md)
 - [Model.VolumeAnalyticsResponseRootV3](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumeAnalyticsResponseRootV3.md)
 - [Model.VolumeAnalyticsResponseV3](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumeAnalyticsResponseV3.md)
 - [Model.VolumePrice](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumePrice.md)
 - [Model.VolumePriceBin](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumePriceBin.md)
 - [Model.VolumePriceMetrics](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumePriceMetrics.md)
 - [Model.VolumePriceResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumePriceResponse.md)
 - [Model.VolumePriceResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumePriceResponseRoot.md)
 - [Model.VolumeTime](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumeTime.md)
 - [Model.VolumeTimeResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumeTimeResponse.md)
 - [Model.VolumeTimeResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumeTimeResponseRoot.md)
 - [Model.VolumeVenue](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumeVenue.md)
 - [Model.VolumeVenueResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumeVenueResponse.md)
 - [Model.VolumeVenueResponseRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/VolumeVenueResponseRoot.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2025 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
